<resources>
    <string name="app_name">HIS</string>
    <string name="database_name">HIS_DB</string>
    <string name="password">Password</string>
    <string name="user_id">User ID</string>
    <string name="we_respect_your_privacy">We respect your privacy</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Send Otp</string>
    <string name="we_hate_spam_as_much_as_you_do">We hate spam as much as you do</string>
    <string name="title_activity_dashboard">HIS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Era Medical University</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="patient_list">Patient List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ipd_patient_list">IPD Patient List</string>
    <string name="opd">OPD</string>
    <string name="ipd">IPD</string>
    <string name="icu">ICU</string>
    <string name="iccu">ICCU</string>
    <string name="casualty">Casualty</string>
    <string name="nutritional">Nutritional</string>
    <string name="radiology">Radiology</string>
    <string name="pathology">Pathology</string>
    <string name="logo">Logo</string>
    <string name="search_patient_by_pid">Search patient by PID</string>
    <string name="head">Head</string>
    <string name="close">Close</string>
    <string name="select_department">Select Department</string>
    <string name="dashboard">DashBoard</string>
    <string name="view_medication">Medication History</string>
    <string name="view_investigation">View Investigation</string>
    <string name="intake_graph">Intake Graph</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="prescription_overview">Patient Prescription Overview</string>
    <string name="existing_complaint">Existing Complaint/Sign and Symptom</string>
    <string name="physical_examination">Physical Examination</string>
    <string name="provisional_diagnosis">Provisional Diagnosis</string>
    <string name="patient_history">Patient History</string>
    <string name="observation_graph">Observation Graph</string>
    <string name="medication">Medication</string>
    <string name="title_activity_view_medication">ViewMedication</string>
    <string name="tab_input_range">Intake Output Range</string>
    <string name="tab_vital_range">Vital Range</string>
    <string name="tab_text_1">Medication</string>
    <string name="tab_text_2">Investigation</string>
    <string name="nutri_tab1">Food List</string>
    <string name="nutri_tab2">Nutrition Achievement</string>
    <string name="tab_activity">Activity</string>
    <string name="tab_problem">Problem</string>
    <string name="tab_medication1">Prescribed Medication</string>
    <string name="tab_medication2">Intake Medication</string>
    <string name="tab_intake1">Fluid</string>
    <string name="tab_intake2">Meals</string>
    <string name="tab_intake3">Supplement</string>
    <string name="record_date">Record Date : </string>
    <string name="add_medicine">Add More Medicine</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="days">Days</string>
    <string name="dose">Dose</string>
    <string name="action">Action</string>
    <string name="view_prescription_overview">Overview</string>
    <string name="logout">Logout</string>
    <string name="height">Height(cm) : </string>
    <string name="weight">Weight(Kg) : </string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="add_investigation">Add Investigation</string>
    <string name="investigation">Investigation</string>
    <string name="test">Test</string>
    <string name="value">Value</string>
    <string name="range">Normal Range</string>
    <string name="test_name">Test Name</string>
    <string name="remark">Remark</string>
    <string name="add">Add</string>
    <string name="temperature">Temperature (°F)</string>
    <string name="spo2">SpO2</string>
    <string name="prescription">Prescription</string>
    <string name="medicine">Medicine</string>
    <string name="strength">Strength</string>
    <string name="frequency">Freq</string>
    <string name="time">Time</string>
    <string name="enter_medicine_name">Enter Medicine Name</string>
    <string name="enter_time">HH:MM AM</string>
    <string name="add_medication">Add Medication</string>
    <string name="enter_frequency">Enter Freq</string>
    <string name="dose_form">Dose Form</string>
    <string name="freq">Frequency</string>
    <string name="duration">Duration</string>
    <string name="save">Save</string>
    <string name="hr">HR(bpm) : </string>
    <string name="rr">RR(rpm) : </string>
    <string name="pulse">Pulse : </string>
    <string name="sys">SYS(mmHg)</string>
    <string name="dys">DIAS(mmHg)</string>
    <string name="temp">Temp(F)</string>
    <string name="progress_note">Progress Note</string>
    <string name="enter_progress_note">Enter Progress Note</string>
    <string name="please_update_to_latest_version">Touch here to Update to the latest version!</string>
    <string name="view_notification">View Notification</string>
    <string name="date">Date : </string>
    <string name="notification">Notification</string>
    <string name="patient_name">Patient Name : </string>
    <string name="doctor">Doctor : </string>
    <string name="progress_notes">Progress Note : </string>
    <string name="am">AM</string>
    <string name="_00">00</string>
    <string name="colon">:</string>
    <string name="result">Result :</string>
    <string name="calculate">Calculate</string>
    <string name="calculator">Calculator</string>
    <string name="go">Go</string>
    <string name="enter_pid">Enter PID</string>
    <string name="formula">Formula :</string>
    <string name="title_activity_intake_input">IntakeInput</string>
    <string name="input_vital">Input Vital</string>
    <string name="input_intake">Input Intake</string>
    <string name="output">Output</string>
    <string name="vital">Vital</string>
    <string name="qty">Qty</string>
    <string name="unit">Unit</string>
    <string name="vital_history_chart">Vital History Chart</string>
    <string name="fluid_intake">Fluid</string>
    <string name="meal_intake">Meal</string>
    <string name="supplement_intake">Supplement</string>
    <string name="supplement_name">Supplement Name</string>
    <string name="meal_name">Type Meal Name</string>
    <string name="dash">-</string>
    <string name="respiratory_rate">Respiratory Rate</string>
    <string name="activity">Activity</string>
    <string name="title_activity_problem_input">ActivityProblemInput</string>
    <string name="activity_problem">Activity/Problem</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title_activity_patient_range">PatientRange</string>
    <string name="patient_range">Patient Range</string>
    <string name="title_activity_intake_output_vital_range">IntakeOutputVitalRange</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="vital_graph">Vital Graph</string>
    <string name="show_result">Result</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="patient_detail_graph">Timeline Graph</string>
    <string name="show_results">Show Result</string>
    <string name="dish_food">Dish/Food</string>
    <string name="supplement">Supplement</string>
    <string name="mineral">Mineral</string>
    <string name="achieved">Achieved</string>
    <string name="rda">RDA</string>
    <string name="recommended">Recommended</string>
    <string name="delete">Delete</string>
    <string name="_0">0%</string>
    <string name="input_report">Input Report</string>
    <string name="select_body_part">Selected Body Part</string>
    <string name="movement">Movement</string>
    <string name="right_hand">Right Hand</string>
    <string name="left_hand">Left Hand</string>
    <string name="left_leg">Left Leg</string>
    <string name="right_leg">Right Leg</string>
    <string name="abdomen">Abdomen</string>
    <string name="chest">Chest</string>
    <string name="patient_input">Patient Input</string>
    <string name="related_to_specific_body_part">Related to specific body part</string>
    <string name="specify_the_amount_and_details_about_output_collected">Specify the amount and details about output collected</string>
    <string name="specify_any_type_of_food_supplement_provided">Specify any type of food/supplement provided</string>
    <string name="specify_the_movement_noticed_in_specific_body_part">Specify the movement noticed in specific body part</string>
    <string name="intake">Intake</string>
    <string name="skip">Skip</string>
    <string name="proceed">Proceed</string>
    <string name="symptoms_related_to_selected_body_part">Symptoms related to selected body part</string>
    <string name="enter_symptoms">Enter Symptoms</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="common_symptoms">Some common symptoms</string>
    <string name="attribute_and_value">Attribute and Value</string>
    <string name="food_intake">Food Intake</string>
    <string name="urine">Urine</string>
    <string name="stool">Stool</string>
    <string name="vomit">Vomit</string>
    <string name="nutrition">Nutrition</string>
    <string name="title_activity_nutriti_analyzer">NutritiAnalyzer</string>
    <string name="medication_side_effect">Medication Side Effect</string>
    <string name="current">Current</string>
    <string name="all">All</string>
    <string name="name">Name:</string>
    <string name="s_n">S.N</string>
    <string name="pid">PID:</string>
    <string name="mob_no">Mob No.:</string>
    <string name="disease">Disease:</string>
    <string name="sub_department">Sub-Department:</string>
    <string name="medicine_name1">Medicine Name:</string>
    <string name="side_effect">Side Effect</string>
    <string name="drug_interaction">Drug Interaction</string>
    <string name="mechanism_of_action">Mechanism of Action</string>
    <string name="pathway">Pathway</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="consultant">Consultant</string>
    <string name="diagnosis1">Diagnosis</string>
    <string name="department">Department</string>
    <string name="test_names">Test Name</string>
    <string name="normal_ranges">Normal Range</string>
    <string name="symptoms">Symptoms</string>
    <string name="rda1">RDA :</string>
    <string name="decline">Decline</string>
    <string name="change">Change</string>
    <string name="patient_dashboard">Patient Dashboard</string>
    <string name="search_symptom">Search Symptom</string>
    <string name="calcium_patient_report">Calcium Patient Report</string>
    <string name="calcium_hourly_report">Calcium Hourly Report</string>
    <string name="employee_shift">Employee Shift</string>
    <string name="analysing_graph">Analysing Graph</string>
    <string name="emponduty">Employee on duty</string>
    <string name="discharge">Discharge</string>
    <string name="control_d">Control D</string>
    <string name="via">Via</string>
    <string name="meditive">Meditive</string>
    <string name="medcheck">Medcheck</string>
    <string name="set_oximeter_type">Set Oximeter Device Type</string>
    <string name="set_bp_type">Set BP Device Type</string>
    <string name="login">Login</string>
    <string name="neuro_icu_daily_chart">Neuro ICU Daily Chart</string>
</resources>