<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/outmenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_patient_list"
            android:icon="@drawable/patientlist"
            android:title="@string/patient_list" />
    </group>
    <group>
        <item
            android:id="@+id/nav_observation"
            android:icon="@drawable/ic_observationgraph"
            android:title="@string/observation_graph" />
        <item
            android:id="@+id/nav_neuro"
            android:icon="@drawable/ic_observationgraph"
            android:title="@string/neuro_icu_daily_chart" />
        <item
            android:id="@+id/nav_analysing"
            android:icon="@drawable/ic_observationgraph"
            android:title="@string/analysing_graph" />
        <item
            android:id="@+id/nav_vital_graph"
            android:icon="@drawable/ic_observationgraph"
            android:title="@string/vital_graph"
            android:visible="false" />
        <item
            android:id="@+id/nav_detail_graph"
            android:icon="@drawable/ic_observationgraph"
            android:title="@string/patient_detail_graph" />
        <item
            android:id="@+id/nav_patient_dashboard"
            android:icon="@drawable/ic_observationgraph"
            android:title="@string/patient_dashboard"
            android:visible="false" />
        <item
            android:id="@+id/nav_cal_patient"
            android:icon="@drawable/ic_observationgraph"
            android:title="@string/calcium_patient_report"
            android:visible="false" />
        <item
            android:id="@+id/nav_cal_dynamic"
            android:icon="@drawable/ic_observationgraph"
            android:title="@string/calcium_hourly_report"
            android:visible="false" />
        <item
            android:id="@+id/nav_ventilator"
            android:icon="@drawable/ic_observationgraph"
            android:title="Ventilator Setting"
            android:visible="false" />
        <item
            android:id="@+id/nav_employee"
            android:icon="@drawable/ic_observationgraph"
            android:title="@string/employee_shift"
            android:visible="false" />
        <item
            android:id="@+id/nav_prescription"
            android:icon="@drawable/ic_prescription"
            android:title="@string/prescription" />
        <item
            android:id="@+id/nav_view_medication"
            android:icon="@drawable/ic_medication"
            android:title="@string/view_medication" />
        <item
            android:id="@+id/nav_investigation"
            android:icon="@drawable/ic_viewinvestigation"
            android:title="@string/view_investigation" />
        <item
            android:id="@+id/nav_input_vital"
            android:icon="@drawable/ic_viewinvestigation"
            android:title="@string/input_vital" />
        <item
            android:id="@+id/nav_input_intake"
            android:icon="@drawable/ic_viewinvestigation"
            android:title="@string/input_intake"
            android:visible="true" />
        <item
            android:id="@+id/nav_output"
            android:icon="@drawable/ic_viewinvestigation"
            android:title="@string/output" />
        <item
            android:id="@+id/nav_range"
            android:icon="@drawable/ic_viewinvestigation"
            android:title="@string/patient_range" />
        <item
            android:id="@+id/nav_activity_problem"
            android:icon="@drawable/ic_viewinvestigation"
            android:title="@string/activity_problem" />
        <item
            android:id="@+id/nav_activity_movement"
            android:icon="@drawable/ic_viewinvestigation"
            android:title="@string/patient_input"
            android:visible="true" />
        <item
            android:id="@+id/nav_progress_note"
            android:icon="@drawable/progressnote"
            android:title="@string/progress_note"
            android:visible="false" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/calculator"
            android:title="@string/calculator" />
        <item
            android:id="@+id/nav_nutrition"
            android:icon="@drawable/calculator"
            android:title="@string/nutrition" />
        <item
            android:id="@+id/nav_intake"
            android:icon="@drawable/ic_intakegraph"
            android:title="@string/intake_graph"
            android:visible="false" />

        <item
            android:id="@+id/uploaddocument"
            android:icon="@drawable/ic_intakegraph"
            android:title="Upload Consent Image"
            android:visible="true" />
        <item
            android:id="@+id/nav_questionnaire"
            android:icon="@drawable/ic_questionnaire"
            android:title="@string/questionnaire" />
        <item
            android:id="@+id/nav_emp_on_duty"
            android:icon="@drawable/ic_questionnaire"
            android:title="@string/emponduty" />
        <item
            android:id="@+id/nav_discharge_patient"
            android:icon="@drawable/dischargepatient"
            android:title="@string/discharge" />
    </group>
</menu>
