<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.his.android.Activity.DevicesSelection">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingTop="@dimen/_2sdp"
        android:paddingBottom="@dimen/_2sdp"
        android:gravity="center"
        android:background="@drawable/rectangle_grey"
        android:text="BP And Oximeter Device Selection"
        android:textColor="@color/blue_text"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/set_oximeter_type"
        android:textColor="@color/blue_text"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/edt_bor"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/rbOxiControlD"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/control_d"
            android:textSize="@dimen/_11sdp" />

        <RadioButton
            android:id="@+id/rbOxiVia"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/via"
            android:textSize="@dimen/_11sdp" />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/set_bp_type"
        android:textColor="@color/blue_text"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/edt_bor"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">
        <RadioButton
            android:id="@+id/rbBpMedcheck"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/medcheck"
            android:textSize="@dimen/_11sdp" />
        <RadioButton
            android:id="@+id/rbBpOmron"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Omron"
            android:textSize="@dimen/_11sdp" />
        <RadioButton
            android:id="@+id/rbBpMeditive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/meditive"
            android:textSize="@dimen/_11sdp" />
    </RadioGroup>
    <TextView
        android:id="@+id/tvSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"/>
</LinearLayout>