<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textSize="@dimen/_16sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textStyle="bold"
        android:textColor="@color/blue_text"
        android:background="#F9F9F9"
        android:gravity="center"
        android:text="@string/notification"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/patient_name"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/txtPName"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/pid"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/txtPid"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="age"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/txtAge"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="gender"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/txtGender"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/department"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/txtDepartment"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/consultant"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/txtDName"/>
        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="@dimen/_2sdp"
            android:text="@string/department"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/txtDept"/>-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/txtNote"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="@dimen/_2sdp"
            android:text="@string/result"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/txtResult"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="@dimen/_2sdp"
            android:id="@+id/llRange"
            android:orientation="horizontal"
            android:text="@string/normal_ranges"
            android:textSize="@dimen/_12sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="@dimen/_2sdp"
                android:text="@string/normal_ranges"
                android:textSize="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="@dimen/_2sdp"
                android:text="@string/normal_ranges"
                android:textSize="@dimen/_12sdp"
                android:id="@+id/txtRange"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>