<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="com.his.android.Activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:background="@drawable/w_bg_new"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtUser"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/edt_bor"
            android:gravity="center"
            android:hint="@string/user_id"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="#bebdbc"
            android:textSize="@dimen/_15sdp"
            android:textStyle="italic"
            app:backgroundTint="#ffffff" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPwd"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/edt_bor"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="#bebdbc"
            android:textSize="@dimen/_15sdp"
            android:textStyle="italic"
            app:backgroundTint="#ffffff" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="#0C2AD1"
            android:textSize="@dimen/_10sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#D3D3D3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/we_respect_your_privacy"
            android:textColor="#4E4E4E"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/we_hate_spam_as_much_as_you_do"
            android:textColor="#4E4E4E"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>
</LinearLayout>